--- a/vehicle/mkv/software/bms/bms.yml
+++ b/vehicle/mkv/software/bms/bms.yml
@@ -39,7 +39,7 @@ publish:
           type: uint16_t
           name: V
           offset: 0
-          scale: 0.0001 * 16
+          scale: 0.0001 * 256
       - name: pack_temperature
         slice: 24 + 16
         unit:
@@ -147,4 +147,93 @@ publish:
           type: uint16_t
           name: ""
           scale: 1
+          offset: 0
+
+  - name: bms_voltage
+    id: 0x401
+    freq_hz: 4
+    signals:
+      - name: ic
+        slice: 0 + 8
+        unit:
+          type: uint8_t
+          name: ""
+          scale: 1
+          offset: 0
+      - name: cell
+        slice: 8 + 8
+        unit:
+          type: enum
+          values:
+            - REG_A
+            - REG_B
+            - REG_C
+            - REG_D
+      - name: voltage_1
+        slice: 16 + 16
+        unit:
+          type: uint16_t
+          name: "volts"
+          scale: 0.0001
+          offset: 0
+      - name: voltage_2
+        slice: 32 + 16
+        unit:
+          type: uint16_t
+          name: "volts"
+          scale: 0.0001
+          offset: 0
+      - name: voltage_3
+        slice: 48 + 16
+        unit:
+          type: uint16_t
+          name: "volts"
+          scale: 0.0001
+          offset: 0
+
+  - name: bms_temperature
+    id: 0x402
+    freq_hz: 4
+    signals:
+      - name: ics
+        slice: 0 + 8
+        unit:
+          type: enum
+          values:
+            - SEGMENTS_1_THRU_3
+            - SEGMENTS_4_THRU_6
+      - name: mux
+        slice: 8 + 4
+        unit:
+          type: uint8_t
+          name: ""
+          scale: 1
+          offset: 0
+      - name: channel
+        slice: 12 + 4
+        unit:
+          type: uint8_t
+          name: ""
+          scale: 1
+          offset: 0
+      - name: temperature_1
+        slice: 16 + 16
+        unit:
+          type: uint16_t
+          name: "volts"
+          scale: 0.0001
+          offset: 0
+      - name: temperature_2
+        slice: 32 + 16
+        unit:
+          type: uint16_t
+          name: "volts"
+          scale: 0.0001
+          offset: 0
+      - name: temperature_3
+        slice: 48 + 16
+        unit:
+          type: uint16_t
+          name: "volts"
+          scale: 0.0001
           offset: 0
