--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -13,5 +13,6 @@ dbc_gen(
         "//vehicle/mkv/software/dashboard:dashboard.yml",
         "//vehicle/mkv/software/emeter:emeter.dbc",
         "//vehicle/mkv/software/motor_controller:motor_controller.dbc",
+        "//vehicle/mkv/software/throttle:throttle.yml",
     ],
 )
